Reservation details were added to be displayed along with user details in user dto